recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:18: error: expected start of definition
	override def run() {
                 ^Spiral:22: error: Unmatched closing brace '}' ignored here
}
^